style.css
body {
	overflow-y:scroll;
}
.error {
	margin: 20px;
	overflow-x: scroll;
	font-family: monospace;
	white-space: pre;
}

#clear-button {
	margin-right: 10px;
}

.query-total,
#query-result,
#hide-explorer {
	display: none;
}

#query-error, #query-error-short {
	display: none;
}

.error-line {
	border-bottom: 2px dotted red;
}

.error-character {
	background: lightsalmon;
}

#query-result pre {
	display: inline;
	font-family: serif;
	border: none;
	background-color: inherit;
}
#query-result {
	width: 100%;
}
#query-box .navbar-left,
#query-box .navbar-right {
	margin-right: 0;
}

#result-browser-menu .glyphicon {
	padding: 0 .5em 0 0;
}

.cm-s-default .cm-bracket {
	color: #000;
}

.CodeMirror {
	border: 1px solid #ccc;
	height: auto !important;
}

.CodeMirror-scroll {
	min-height: 300px;
}
.queryEditor {
	min-height: 273px;
}

pre.CodeMirror-placeholder {
	color: #777777;
}

.exampleQueries {
	width: 160px;
}

iframe.shortUrl {
	border: none;
	width: 250px;
	height: 40px;
}

.queryEditor {
	visibility: hidden;
	padding: 0;
}

#query-box {
	position: relative;
}

#query-box .status {
	padding: 3px;
	font-size: 13px;
	min-height: 25px;
	color: #777;
	margin-bottom: 5px;
}
.dataUpdated > span:nth-child(1) {
	padding: 5px;
}

#query-box .nav {
	margin-left: 0;
}
.shareQuery {
	z-index: 100;
	position: absolute;
	top: 10px;
	right: 10px;
	font-size: 25px;
	background: rgba(255,255,255,0.5);
}

/**
	Bootstrap Styles
**/
.navbar, .alert {
	margin-bottom: 0;
}

.navbar-right {
	margin-right: 0;
}

.popover{
	max-width: 500px;
	width: auto;
}

.dropdown-toggle .glyphicon:before {
	margin-right: 3px;
}

.navbar-brand {
	line-height: 35px;
	padding: 5px 15px;
}
.navbar-brand img{
	padding-right: 5px;
}
.navbar-toggle {
	  z-index: 100;
}

.navbar-btn {
	margin-left: 15px;
}

.nav > li {
	float: left;
}
/* change navbar breakpoint */
@media (max-width: 900px) {
    .navbar-header {
        float: none;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
        margin: 7.5px -15px;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .navbar-text {
        float: left;
        margin: 15px 0;
    }
    .navbar-collapse.collapse.in {
        display: block!important;
    }
    .collapsing {
        overflow: hidden!important;
    }
}

/*
	editor hint style
*/
.wikibase-rdf-hint{
  border-bottom: 1px solid gray;
  white-space: normal;
}

/**
	Query example dialog
**/

.QueryExamples .tagCloud {
	width: 100%;
	height: 200px;
}

.QueryExamples .tag {
	background-color: #337ab7;
	background-image: none;
}

.QueryExamples input.tags-input {
	visibility: hidden;
}

.QueryExamples .tagFilter {
	padding-bottom: 5px!important;
}

.QueryExamples  .exampleTable {
	max-height: 500px;
	overflow-y: auto;
	overflow-x: hidden;
	border: 1px solid #ccc;
}

iframe.shortUrl {
	border: none;
	width: 250px;
	height: 40px;
}

.explorer-panel {
	position: fixed;
	right: 0;
	top: 200px;
	background-color: rgba(255,255,255,0.8);
	z-index: 100;
	display: none;
	min-height: 800px;
	max-width:100vw;
	overflow:auto;
}

/* colors */

div.jqcloud { color: #337ab7; }
div.jqcloud a { color: inherit; }
div.jqcloud a:hover { color: #337ab7; }
div.jqcloud a:hover { color: #337ab7; }
div.jqcloud span.w10 { color: rgba(51,122,183,1); }
div.jqcloud span.w9 { color: rgba(51,122,183,0.9); }
div.jqcloud span.w8 { color: rgba(51,122,183,0.8); }
div.jqcloud span.w7 { color: rgba(51,122,183,0.75); }
div.jqcloud span.w6 { color: rgba(51,122,183,0.6); }
div.jqcloud span.w5 { color: rgba(51,122,183,0.65); }
div.jqcloud span.w4 { color: rgba(51,122,183,0.5); }
div.jqcloud span.w3 { color: rgba(51,122,183,0.55); }
div.jqcloud span.w2 { color: rgba(51,122,183,0.4); }
div.jqcloud span.w1 { color: rgba(51,122,183,0.45); }


/* masonry */
.masonry {
    width: 95%;
    margin: 3em auto;
    margin: 1.5em 0;
    padding: 0;
    -moz-column-gap: 1.5em;
    -webkit-column-gap: 1.5em;
    column-gap: 1.5em;
    font-size: .85em;
}
.item > a > img {
	width: 100%;
	display: inline-block;;
}
.item {
    display: inline-block;
    background: #fff;
    padding: 1em;
    margin: 0 0 1.5em;
    width: 100%;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-shadow: 2px 2px 4px 0 #ccc;
}

@media only screen and (min-width: 400px) {
    .masonry {
        -moz-column-count: 2;
        -webkit-column-count: 2;
        column-count: 2;
    }
}

@media only screen and (min-width: 700px) {
    .masonry {
        -moz-column-count: 3;
        -webkit-column-count: 3;
        column-count: 3;
    }
}

@media only screen and (min-width: 900px) {
    .masonry {
        -moz-column-count: 4;
        -webkit-column-count: 4;
        column-count: 4;
    }
}

@media only screen and (min-width: 1100px) {
    .masonry {
        -moz-column-count: 5;
        -webkit-column-count: 5;
        column-count: 5;
    }
}

@media only screen and (min-width: 1280px) {
    .wrapper {
        width: 1260px;
    }
}

/*
	ActionBar
*/

.action-bar .progress {
    height: 30px;
    font-size: 30px;
}
.action-bar .progress-bar {
    font-size: 16px;
    line-height: 30px;
    font-weight: bold;
}

.action-bar .label {
	display: block;
    font-size: 16px;
    line-height: 20px;
}

.action-bar {
	display: none;
}

/*
	Treemap
*/
#query-result .labelbody {
	background: transparent;
	overflow: hidden;
	cursor: pointer;
}

/*
	Visual Editor
*/
.visual-editor-trigger {
	display: none;
    z-index: 100;
    position: absolute;
    top: 10px;
    right: 45px;
    font-size: 25px;
}

.visual-editor {
	display: none;
	min-width: 300px;
	max-width: 500px;
    z-index: 100;
    position: absolute;
    top: 5px;
    right: 45px;
    font-size: 15px;
    padding-left: 35px;
}
.visual-editor .panel-info {
    background: rgba(255,255,255,0.9);
}

.visual-editor .panel-heading {
	background: rgba(255, 255, 255, 0.9);
	padding: 8px 10px;
}

.visual-editor .panel-body {
	font-size: 120%;
}

.select2-container {
	z-index: 2000;
	min-width: 200px;
}
.visual-editor .popover {
	min-width: 250px;
	white-space: nowrap;
}

.visual-editor .spacer {
	min-height: 0.8em;
}

/*
	ULS
*/

.nav .uls-trigger  {
	display: none;
	padding-left: 30px;
}

/*
	VIS
*/
.vis-item {
	padding: 15px;
	box-shadow: 5px 5px 20px rgba(0,0,0,0.2);
}

.vis-item.vis-selected {
	background-color: white;
	border-color: #888a85;
}

.vis-item, .vis-item.vis-line {
	background-color: white;
	border-color: #888a85;
}

/*
	MultiDimensionResultBrowser
*/

#query-result .foreground path {
  fill: none;
  stroke: #222;
  stroke-opacity: 0.4;
  pointer-events: none;
  stroke-width: 3px;
}

#query-result .axis .title {
  font-size: 8px;
  font-weight: bold;
  text-transform: uppercase;
  transform: rotate(-12deg) translate(-5px,-6px);
}

#query-result .axis line,
#query-result .axis path {
  fill: none;
  stroke: #000;
  stroke-width: 1px;
}

#query-result .brush .extent {
  fill-opacity: .3;
  stroke: #fff;
  stroke-width: 1px;
}

#query-result pre {
  width: 900px;
  margin: 10px 30px;
  tab-size: 21;
  font-size: 12px;
  overflow: auto;
}

